Disable electron-builder auto-publish, let workflow handle releases

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     },
     "portable": {
       "artifactName": "${productName}-${version}-portable.${ext}"
-    }
+    },
+    "publish": null
   }
 }
