--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "concurrently \"npm run build:watch\" \"wait-on dist/src/main/index.js && electron .\"",
     "build": "tsc && vite build",
     "build:watch": "tsc && concurrently \"tsc --watch\" \"vite build --watch\"",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "package": "electron-builder",
     "package:win": "electron-builder --win",
     "package:linux": "electron-builder --linux",
@@ -31,6 +34,7 @@
     "electron-builder": "^24.9.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.8",
+    "vitest": "^4.0.17",
     "wait-on": "^7.2.0"
   },
   "dependencies": {
@@ -59,7 +63,9 @@
       {
         "from": "src/renderer/assets/logos",
         "to": "assets/logos",
-        "filter": ["**/*"]
+        "filter": [
+          "**/*"
+        ]
       }
     ],
     "mac": {
@@ -76,11 +82,15 @@
       "target": [
         {
           "target": "portable",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         },
         {
           "target": "zip",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         }
       ],
       "icon": "src/renderer/assets/icons/app-icon.png",
